# PL_Fantasy_Project

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  api.py  db.py  fpl_client.py  marts.py  models.py  normalize.py  pipeline.py  squad_source.py  transfer_engine.py  transfers.py  validate.py  xpts.py  xpts_ml.py
static/: index.html
tests/: __init__.py  conftest.py  test_marts.py  test_normalize.py  test_transfers.py  test_validate.py  test_xpts.py  test_xpts_ml.py
tests/fixtures/: bootstrap_static_sample.json  element_summary_sample.json  fixtures_sample.json
