[project]
name = "fpl-pipeline"
version = "0.1.0"
description = "FPL data ingestion pipeline: bronze JSON + silver SQLite"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests>=2.28",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
