[project]
name = "fpl-pipeline"
version = "0.1.0"
description = "FPL data ingestion pipeline: bronze JSON + silver SQLite"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests>=2.28",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.22"]
ml = ["xgboost>=2.0", "pandas>=2.0", "scikit-learn>=1.3"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
